# tank

./: .gitignore  Cargo.toml  README.md  package-lock.json  publish.sh
.github/: SPONSOR.md
docs/: 00-cheat-sheet.md  01-introduction.md  02-getting-started.md  03-connection.md  04-capabilities.md  05-types.md  06-entity-definition.md  07-simple-operations.md  08-advanced-operations.md  09-raw-sql.md  1-introduction.md  10-drivers.md  2-getting-started.md  3-connection.md  4-types.md  5-entity-definition.md  6-entity-operations.md  6-simple-operations.md  7-advanced-operations.md  8-raw-sql.md  9-drivers.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: index.js  style.css
docs/components/: GettingStarted.vue  TankJoke.vue
docs/public/: jokes.json
tank-chdb/: Cargo.toml
tank-chdb/src/: connection.rs  driver.rs  lib.rs  prepared.rs  transaction.rs  value_wrap.rs
tank-chdb/tests/: chdb.rs
tank-clickhouse/: Cargo.toml
tank-clickhouse/src/: connection.rs  driver.rs  lib.rs  prepared.rs  sql_writer.rs  transaction.rs  value_wrap.rs
tank-clickhouse/tests/: clickhouse.rs  init.rs
tank-core/: Cargo.toml  README.md
tank-core/src/: as_value.rs  column.rs  connection.rs  data_set.rs  dataset.rs  decode_type.rs  driver.rs  entity.rs  executor.rs  interval.rs  join.rs  lib.rs  pool.rs  pool_config.rs  prepared.rs  query.rs  relations.rs  row.rs  table_ref.rs  transaction.rs  util.rs  value.rs
tank-core/src/expression/: binary_op.rs  default_value_type.rs  expression.rs  matcher.rs  mod.rs  op_precedence.rs  operand.rs  ordered.rs  unary_op.rs  visitor.rs
tank-core/src/query/: as_query.rs  dyn_query.rs  mod.rs  prepared.rs  query.rs  query_builder.rs  query_metadata.rs  raw_query.rs
tank-core/src/query/builder/: create_schema.rs  create_table.rs  drop_schema.rs  drop_table.rs  insert_into.rs  mod.rs  select.rs
tank-core/src/writer/: context.rs  sql_writer.rs
tank-duckdb/: Cargo.toml  README.md
tank-duckdb/src/: connection.rs  driver.rs  extract.rs  lib.rs  prepared.rs  sql_writer.rs  transaction.rs  utility.rs
tank-duckdb/tests/: connection.rs  duckdb.rs  structure.rs
tank-macros/: Cargo.toml  README.md
tank-macros/src/: column_trait.rs  decode_column.rs  decode_expression.rs  decode_join.rs  decode_table.rs  encode_column_def.rs  encode_column_ref.rs  frag_evaluated.rs  from_row_trait.rs  lib.rs
tank-mongodb/: Cargo.toml  README.md
tank-mongodb/src/: connection.rs  driver.rs  lib.rs  matcher.rs  payload.rs  prepared.rs  row_wrap.rs  sql_writer.rs  transaction.rs  util.rs  value_wrap.rs  visitor.rs
tank-mongodb/tests/: batch.rs  init.rs  matcher.rs  mongodb.rs  pipeline.rs  visitor.rs
tank-mongodb/tests/assets/: mongod.conf
tank-mysql/: Cargo.toml  README.md
tank-mysql/src/: README.md  connection.rs  driver.rs  executor.rs  lib.rs  local_infile.rs  prepared.rs  row_wrap.rs  sql_writer.rs  transaction.rs  value_wrap.rs
tank-mysql/tests/: check_mysql_async_types.rs  escaping.rs  init.rs  mariadb.rs  mysql.rs
tank-mysql/tests/assets/: 00-ssl.sh  client.p12  my.cnf
tank-postgres/: Cargo.toml  README.md
tank-postgres/src/: connection.rs  driver.rs  interval_wrap.rs  lib.rs  prepared.rs  sql_writer.rs  transaction.rs  util.rs  value_wrap.rs
tank-postgres/tests/: init.rs  postgres.rs
tank-postgres/tests/assets/: 00-ssl.sh
tank-scylladb/: Cargo.toml  README.md
tank-scylladb/src/: connection.rs  driver.rs  lib.rs  prepared.rs  row_wrapper.rs  sql_writer.rs  transaction.rs  value_wrap.rs  visitor.rs
tank-scylladb/tests/: cassandra.rs  connection.rs  init.rs  scylladb.rs
tank-scylladb/tests/assets/: scylla.yaml
tank-sqlite/: Cargo.toml  README.md
tank-sqlite/src/: connection.rs  driver.rs  extract.rs  lib.rs  prepared.rs  sql_writer.rs  transaction.rs
tank-sqlite/tests/: connection.rs  sqlite.rs
tank-tests/: Cargo.toml  README.md
tank-tests/src/: aggregates.rs  ambiguity.rs  arrays1.rs  arrays2.rs  books.rs  cheat_sheet.rs  complex.rs  conditions.rs  custom.rs  enums.rs  identifiers.rs  insane.rs  interval.rs  keywords.rs  kv_storage.rs  lib.rs  limits.rs  math.rs  metrics.rs  multiple.rs  operations.rs  orders.rs  other.rs  readme.rs  requests.rs  reutilization.rs  service.rs  shopping.rs  simple.rs  time.rs  trade.rs  transaction1.rs  transaction2.rs  transaction3.rs  user.rs
tank-valkey/: Cargo.toml  LICENSE  README.md
tank-valkey/src/: connection.rs  driver.rs  lib.rs  prepared.rs  sql_writer.rs  transaction.rs  util.rs  value_wrap.rs  visitor.rs
tank-valkey/tests/: init.rs  pk_condition.rs  redis.rs  valkey.rs
tank-yourdb/: Cargo.toml  README.md
tank-yourdb/src/: connection.rs  driver.rs  prepared.rs  sql_writer.rs  transaction.rs
tank-yourdb/tests/: yourdb.rs
test_mysql_import/: Cargo.toml
test_mysql_import/src/: main.rs
tests/: column.rs  customer.rs  employee.rs  entity_empty.rs  entity_odd.rs  entity_simple.rs  expression.rs  interval.rs  join.rs  matcher.rs  product.rs  query.rs  sql.rs  trade.rs  util.rs  value.rs  visitor.rs
