[package]
name = "tank-macros"
description = "Procedural macros for Tank: the Rust data layer. Not intended to be used directly."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tank-core.workspace = true
