[package]
name = "tank-mongodb"
description = "MongoDB driver implementation for Tank: the Rust data layer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-stream = { workspace = true }
log.workspace = true
mongodb = "3"
serde_json = { workspace = true }
serde.workspace = true
tank-core.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tank-tests = { path = "../tank-tests", features = ["disable-transactions"] }
tokio.workspace = true
