[package]
name = "tank-mysql"
description = "MySQL and MaridDB driver implementation for Tank: the Rust data layer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[features]

[dependencies]
async-stream.workspace = true
log.workspace = true
mysql_async = { version = "0", features = ["native-tls-tls", "rust_decimal", "time"] }
serde_json.workspace = true
tank-core.workspace = true
time.workspace = true
url.workspace = true

[dev-dependencies]
rcgen = "0"
tank-tests = { path = "../tank-tests", features = [
    "disable-infinity",
    "disable-large-integers",
    "disable-large-intervals",
    "disable-multiple-statements",
    "disable-old-dates",
] }
testcontainers-modules = { version = "0", features = ["mysql", "mariadb"] }
tokio.workspace = true
urlencoding.workspace = true
