[package]
name = "tank-scylladb"
description = "ScyllaDB driver implementation for Tank: the Rust data layer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-stream.workspace = true
log.workspace = true
openssl = "0"
rust_decimal.workspace = true
scylla = { version = "1", features = [ "openssl-010", "time-03" ] }
tank-core.workspace = true
time.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
rcgen = { version = "0", features = [ "aws_lc_rs" ] }
tank-tests = { path = "../tank-tests", features = [
    "disable-multiple-statements",
    "disable-nested-collections",
    "disable-old-dates",
] }
testcontainers-modules = { version = "0", features = [ "scylladb" ] }
tokio.workspace = true
