[package]
name = "tank-tests"
description = "Test suide for drivers of Tank: the Rust data layer. This is intended to be used by drivers to implement common unit tests."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
rust_decimal.workspace = true
tank = { workspace = true, features = ["chrono"] }
time.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { workspace = true, features = ["v4"] }

[features]
disable-arrays = []
disable-groups = []
disable-infinity = []
disable-intervals = []
disable-joins = []
disable-large-integers = []
disable-large-intervals = []
disable-lists = []
disable-maps = []
disable-multiple-statements = []
disable-nested-collections = []
disable-old-dates = []
disable-ordering = []
disable-references = []
disable-transactions = []
