[package]
name = "tank-valkey"
description = "Valkey and Redis driver implementation for Tank: the Rust data layer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-stream = { workspace = true }
log.workspace = true
redis = { version = "1.0.4", features = ["aio", "rust_decimal", "tokio-comp", "tokio-native-tls-comp"] }
tank-core.workspace = true

[dev-dependencies]
rcgen.workspace = true
tank = { path = ".." }
tank-tests = { path = "../tank-tests", features = [
    "disable-groups",
    "disable-intervals",
    "disable-joins",
    "disable-multiple-statements",
    "disable-ordering",
    "disable-references",
] }
testcontainers-modules = { version = "0", features = ["valkey", "redis"] }
time.workspace = true
tokio.workspace = true
urlencoding.workspace = true
uuid.workspace = true
